# oj-eval-codex-079-20260402002827

./: .gitignore  CMakeLists.txt
src/: main.cpp
